docs: add core project documentation, configuration, and implementation roadmaps